changes for running benchmerking system

--- a/benchmark/benchmark.ipynb
+++ b/benchmark/benchmark.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 3\n",
+    "n = 5\n",
     "shareProducers = 0.15\n"
    ]
   },
@@ -78,17 +78,7 @@
       "Generating the corresponding Solidity Contracts...\n",
       "Saving the generated code to the corresponding Solidity-Contract Files...\n",
       "Saving the generated code to the ned-server-config.js File...\n",
-      "Done!\n",
-      "Compiling settlement-check.zok\n",
-      "\n",
-      "Compiled code written to 'out'\n",
-      "Number of constraints: 118557\n",
-      "Performing setup...\n",
-      "WARNING: You are using the G16 scheme which is subject to malleability. See zokrates.github.io/reference/proving_schemes.html#g16-malleability for implications.\n",
-      "Has generated 114349 points\n",
-      "Exporting verifier...\n",
-      "Finished exporting verifier.\n",
-      "/Users/paul/Documents/projects/decentralized-energy-trading\n"
+      "Done!\n"
      ]
     }
    ],
@@ -129,10 +119,12 @@
     "    !zokrates compile -i settlement-check.zok --light\n",
     "    !zokrates setup --light\n",
     "    !zokrates export-verifier\n",
+    "    !pwd\n",
     "    !cp ./verifier.sol ../contracts/verifier.sol\n",
     "#     count_constraints()\n",
     "    %cd ..\n",
     "#     !truffle compile\n",
+    "    print(\"Compiling and deploying Contracts...\")\n",
     "    !truffle migrate --reset hard --network benchmark\n",
     "    !node benchmark/setup_benchmark.js {wE} {nE}\n",
     "%cd benchmark"
