removed checkpoints and small changes

--- a/benchmark/netting_diagram.ipynb
+++ b/benchmark/netting_diagram.ipynb
@@ -2,26 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in /Users/paul/anaconda3/lib/python3.7/site-packages (3.1.0)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/paul/anaconda3/lib/python3.7/site-packages (from matplotlib) (0.10.0)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/paul/anaconda3/lib/python3.7/site-packages (from matplotlib) (1.1.0)\r\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/paul/anaconda3/lib/python3.7/site-packages (from matplotlib) (2.4.0)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/paul/anaconda3/lib/python3.7/site-packages (from matplotlib) (2.8.0)\r\n",
-      "Requirement already satisfied: numpy>=1.11 in /Users/paul/anaconda3/lib/python3.7/site-packages (from matplotlib) (1.16.4)\r\n",
-      "Requirement already satisfied: six in /Users/paul/anaconda3/lib/python3.7/site-packages (from cycler>=0.10->matplotlib) (1.12.0)\r\n",
-      "Requirement already satisfied: setuptools in /Users/paul/anaconda3/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib) (41.0.1)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# %%capture\n",
+    "%%capture\n",
     "!{sys.executable} -m pip install matplotlib\n",
     "import sys\n",
     "import json\n",
