--- a/benchmark/benchmarking.ipynb
+++ b/benchmark/benchmarking.ipynb
@@ -6,7 +6,11 @@
     "scrolled": true
    },
    "source": [
-    "## Benchmarking notebook for decentralized energy trading"
+    "## Benchmarking notebook for decentralized energy trading\n",
+    "\n",
+    "#### To run please start the following services:\n",
+    "- Parity Container: ```yarn run-benchmark-node```\n",
+    "- Benchmarking Ned Server: ```yarn run-benchmark-ned```\n"
    ]
   },
   {
@@ -49,23 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created `%benchmark` as an alias for `%timeit -n 1 -r 1 -o`.\n",
-      "Created `%%benchmark` as an alias for `%%timeit -n 1 -r 1 -o`.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 100\n",
     "step = 20\n",
-    "shareProducers = 0.1\n",
-    "%alias_magic benchmark timeit -p \"-n 1 -r 1 -o\""
+    "shareProducers = 0.1"
    ]
   },
   {
@@ -134,33 +128,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/paul/Documents/projects/decentralized-energy-trading\n",
-      "/Users/paul/Documents/projects/decentralized-energy-trading\n",
-      "[(1, 1), (2, 18), (4, 36), (6, 54), (8, 72), (10, 90)]\n",
-      "/Users/paul/Documents/projects/decentralized-energy-trading/zokrates-code\n",
-      "Compiling settlement-check.zok\n",
-      "\n",
-      "Compiled code written to 'out'\n",
-      "Number of constraints: 348039\n",
-      "12.3 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n",
-      "Performing setup...\n",
-      "WARNING: You are using the G16 scheme which is subject to malleability. See zokrates.github.io/reference/proving_schemes.html#g16-malleability for implications.\n",
-      "Has generated 335443 points\n",
-      "1min 1s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n",
-      "Exporting verifier...\n",
-      "Finished exporting verifier.\n",
-      "/Users/paul/Documents/projects/decentralized-energy-trading\n",
-      "Compiling and deploying Contracts...\n",
-      "Setting up benchmark...\n",
-      "Setup Successful!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ..\n",
     "reset_files()\n",
