integrates zoKratesCodeGeneration script into yarn script + added documentation

--- a/benchmark/benchmarking.ipynb
+++ b/benchmark/benchmarking.ipynb
@@ -137,8 +137,8 @@
     "hhNumbers = createhhNumbers()\n",
     "\n",
     "for i in hhNumbers:\n",
+    "    !yarn generate-prooving-files {i[0]} {i[1]} benchmark\n",
     "    %cd zokrates-code\n",
-    "    !node zoKratesCodeGenerator.js {i[0]} {i[1]} benchmark\n",
     "    !zokrates compile -i settlement-check.zok --light\n",
     "    !zokrates setup --light\n",
     "    !zokrates export-verifier\n",
